// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ExternalLinks > opens the menu when the button is clicked 1`] = `
<div id="external-link-btn">
  <button
    aria-controls="external-link-btn"
    aria-expanded="true"
    aria-haspopup="menu"
    aria-label="external-link-btn"
    aria-owns="external-link-btn"
    class="
      d-flex
      px-3
      rounded-0
      v-btn
      v-btn--density-default
      v-btn--elevated
      v-btn--size-default
      v-btn--variant-elevated
      v-theme--light
      vd-external-links-btn
    "
    style="
      background-color: #3d67ae;
      color: #fff;
      caret-color: #fff;
      min-height: 48px;
      min-width: 328px;
      transform: translateX(0);
      position: absolute;
      flex-direction: row;
      top: 0px;
      bottom: auto;
      left: 0px;
      right: auto;
      z-index: 4;
    "
    type="button"
  >
    <span class="v-btn__overlay"></span>
    <span class="v-btn__underlay"></span>
    <!---->
    <span
      class="v-btn__content"
      data-no-activator=""
    >
      <span class="
        mr-3
        vd-external-links-btn-text
        white--text
      ">
        Consulter les données externes
      </span>
      <i
        aria-hidden="true"
        class="
          M15.41,16.58L10.83,12L15.41,7.41L14,6L8,12L14,18L15.41,16.58Z
          mdi
          notranslate
          text-white
          v-icon
          v-icon--size-default
          v-theme--light
        "
      ></i>
    </span>
    <!---->
    <!---->
  </button>
  <!-- teleport start -->
  <div
    class="
      v-locale--is-ltr
      v-menu
      v-overlay
      v-overlay--absolute
      v-overlay--active
      v-theme--light
      vd-external-links
      vd-external-links--left
    "
    id="external-link-btn"
    style="z-index: 4;"
    tile="true"
  >
    <transition-stub
      appear="true"
      css="true"
      name="fade-transition"
      persisted="false"
    >
      <!---->
    </transition-stub>
    <transition-stub
      appear="true"
      css="true"
      name="fade-transition"
      persisted="true"
      target="<button data-v-353763df="" type="button" class="v-btn v-btn--elevated v-theme--light v-btn--density-default rounded-0 v-btn--size-default v-btn--variant-elevated d-flex px-3 vd-external-links-btn" style="background-color: #3d67ae; color: #fff; caret-color: #fff; min-height: 48px; min-width: 328px; transform: translateX(0); position: absolute; flex-direction: row; top: 0px; bottom: auto; left: 0px; right: auto; z-index: 4;" aria-haspopup="menu" aria-expanded="true" aria-controls="external-link-btn" aria-label="external-link-btn" aria-owns="external-link-btn"><span class="v-btn__overlay"></span><span class="v-btn__underlay"></span><!----><span class="v-btn__content" data-no-activator=""><span data-v-353763df="" class="mr-3 vd-external-links-btn-text white--text">Consulter les données externes</span><i data-v-353763df="" class="M15.41,16.58L10.83,12L15.41,7.41L14,6L8,12L14,18L15.41,16.58Z mdi v-icon notranslate v-theme--light v-icon--size-default text-white" aria-hidden="true"></i></span><!----><!----></button>"
    >
      <div
        class="v-overlay__content"
        style="
          --v-overlay-anchor-origin: top right;
          transform-origin: bottom right;
          top: 12px;
          left: 12px;
          min-width: 0px;
          max-width: 0px;
          max-height: 0px;
        "
      >
        <div
          class="
            elevation-3
            py-0
            v-list
            v-list--density-default
            v-list--one-line
            v-theme--light
            vd-external-links-list
          "
          role="listbox"
          tabindex="0"
        >
          <a
            class="
              rounded-0
              v-list-item
              v-list-item--density-default
              v-list-item--link
              v-list-item--one-line
              v-list-item--variant-text
              v-theme--light
            "
            href="https://www.ameli.fr"
            rel="noopener noreferrer"
            tabindex="-2"
            target="_blank"
          ><span class="v-list-item__overlay"></span><span class="v-list-item__underlay"></span>
            
          <!---->
            <div
            class="v-list-item__content"
            data-no-activator=""
          >
              
          <!---->
              
          <!---->
              <div class="
            d-flex
            flex-row
            justify-space-between
          ">
                <div class="v-list-item-title">ameli.fr</div><i
            aria-hidden="true"
            class="
              0
              0
              0,0
              0,0
              21,19V12H19V19Z
              3,3.9
              3,5V19A2,2
              5,21H19A2,2
              M14,3V5H17.59L7.76,14.83L9.17,16.24L19,6.41V10H21V3M19,19H5V5H12V3H5C3.89,3
              mdi
              notranslate
              v-icon
              v-icon--size-default
              v-theme--light
            "
            style="
              color: rgba(0, 0, 0, .54);
              caret-color: rgba(0, 0, 0, .54);
            "
          ></i>
              </div>
            </div>
            
          <!---->
          </a>
          <a
            class="
              rounded-0
              v-list-item
              v-list-item--density-default
              v-list-item--link
              v-list-item--one-line
              v-list-item--variant-text
              v-theme--light
            "
            href="https://www.github.com"
            rel="noopener noreferrer"
            tabindex="-2"
            target="_blank"
          ><span class="v-list-item__overlay"></span><span class="v-list-item__underlay"></span>
            
          <!---->
            <div
            class="v-list-item__content"
            data-no-activator=""
          >
              
          <!---->
              
          <!---->
              <div class="
            d-flex
            flex-row
            justify-space-between
          ">
                <div class="v-list-item-title">Github</div><i
            aria-hidden="true"
            class="
              0
              0
              0,0
              0,0
              21,19V12H19V19Z
              3,3.9
              3,5V19A2,2
              5,21H19A2,2
              M14,3V5H17.59L7.76,14.83L9.17,16.24L19,6.41V10H21V3M19,19H5V5H12V3H5C3.89,3
              mdi
              notranslate
              v-icon
              v-icon--size-default
              v-theme--light
            "
            style="
              color: rgba(0, 0, 0, .54);
              caret-color: rgba(0, 0, 0, .54);
            "
          ></i>
              </div>
            </div>
            
          <!---->
          </a>
          <a
            class="
              rounded-0
              v-list-item
              v-list-item--density-default
              v-list-item--link
              v-list-item--one-line
              v-list-item--variant-text
              v-theme--light
            "
            href="https://www.twitter.com"
            rel="noopener noreferrer"
            tabindex="-2"
            target="_blank"
          ><span class="v-list-item__overlay"></span><span class="v-list-item__underlay"></span>
            
          <!---->
            <div
            class="v-list-item__content"
            data-no-activator=""
          >
              
          <!---->
              
          <!---->
              <div class="
            d-flex
            flex-row
            justify-space-between
          ">
                <div class="v-list-item-title">Twitter</div><i
            aria-hidden="true"
            class="
              0
              0
              0,0
              0,0
              21,19V12H19V19Z
              3,3.9
              3,5V19A2,2
              5,21H19A2,2
              M14,3V5H17.59L7.76,14.83L9.17,16.24L19,6.41V10H21V3M19,19H5V5H12V3H5C3.89,3
              mdi
              notranslate
              v-icon
              v-icon--size-default
              v-theme--light
            "
            style="
              color: rgba(0, 0, 0, .54);
              caret-color: rgba(0, 0, 0, .54);
            "
          ></i>
              </div>
            </div>
            
          <!---->
          </a>
        </div>
      </div>
    </transition-stub>
  </div>
  <!-- teleport end -->
</div>
`;

exports[`ExternalLinks > renders correctly 1`] = `
<div id="external-link-btn">
  <v-menu-stub
    activatorprops="[object Object]"
    attach="true"
    class="
      vd-external-links
      vd-external-links--left
    "
    closedelay="250"
    closeonback="true"
    closeoncontentclick="true"
    contained="false"
    disabled="false"
    eager="false"
    id="external-link-btn"
    location="bottom"
    locationstrategy="connected"
    modelvalue="false"
    noclickanimation="false"
    offset="0"
    opendelay="300"
    openonhover="false"
    origin="auto"
    persistent="false"
    scrim="false"
    scrollstrategy="reposition"
    submenu="false"
    tile="true"
    transition="fade-transition"
    zindex="4"
  ></v-menu-stub>
</div>
`;

exports[`ExternalLinks > renders correctly with fixed prop 1`] = `
<div id="external-link-btn">
  <button
    aria-controls="external-link-btn"
    aria-expanded="true"
    aria-haspopup="menu"
    aria-label="external-link-btn"
    aria-owns="external-link-btn"
    class="
      d-flex
      px-3
      rounded-0
      v-btn
      v-btn--density-default
      v-btn--elevated
      v-btn--size-default
      v-btn--variant-elevated
      v-theme--light
      vd-external-links-btn
    "
    style="
      background-color: #3d67ae;
      color: #fff;
      caret-color: #fff;
      min-height: 48px;
      min-width: 328px;
      transform: translateX(0);
      position: fixed;
      flex-direction: row-reverse;
      top: auto;
      bottom: 0px;
      left: auto;
      right: 0px;
      z-index: 5;
    "
    type="button"
  >
    <span class="v-btn__overlay"></span>
    <span class="v-btn__underlay"></span>
    <!---->
    <span
      class="v-btn__content"
      data-no-activator=""
    >
      <span class="
        ml-3
        vd-external-links-btn-text
        white--text
      ">
        Consulter les données externes
      </span>
      <i
        aria-hidden="true"
        class="
          M8.59,16.58L13.17,12L8.59,7.41L10,6L16,12L10,18L8.59,16.58Z
          mdi
          notranslate
          text-white
          v-icon
          v-icon--size-default
          v-theme--light
        "
      ></i>
    </span>
    <!---->
    <!---->
  </button>
  <!-- teleport start -->
  <div
    class="
      v-locale--is-ltr
      v-menu
      v-overlay
      v-overlay--absolute
      v-overlay--active
      v-theme--light
      vd-external-links
      vd-external-links--right
    "
    id="external-link-btn"
    style="z-index: 24;"
    tile="true"
  >
    <transition-stub
      appear="true"
      css="true"
      name="fade-transition"
      persisted="false"
    >
      <!---->
    </transition-stub>
    <transition-stub
      appear="true"
      css="true"
      name="fade-transition"
      persisted="true"
      target="<button data-v-353763df="" type="button" class="v-btn v-btn--elevated v-theme--light v-btn--density-default rounded-0 v-btn--size-default v-btn--variant-elevated d-flex px-3 vd-external-links-btn" style="background-color: #3d67ae; color: #fff; caret-color: #fff; min-height: 48px; min-width: 328px; transform: translateX(0); position: fixed; flex-direction: row-reverse; top: auto; bottom: 0px; left: auto; right: 0px; z-index: 5;" aria-haspopup="menu" aria-expanded="true" aria-controls="external-link-btn" aria-label="external-link-btn" aria-owns="external-link-btn"><span class="v-btn__overlay"></span><span class="v-btn__underlay"></span><!----><span class="v-btn__content" data-no-activator=""><span data-v-353763df="" class="ml-3 vd-external-links-btn-text white--text">Consulter les données externes</span><i data-v-353763df="" class="M8.59,16.58L13.17,12L8.59,7.41L10,6L16,12L10,18L8.59,16.58Z mdi v-icon notranslate v-theme--light v-icon--size-default text-white" aria-hidden="true"></i></span><!----><!----></button>"
    >
      <div
        class="v-overlay__content"
        style="
          --v-overlay-anchor-origin: bottom right;
          transform-origin: top right;
          top: 12px;
          left: 12px;
          min-width: 0px;
          max-width: 0px;
          max-height: 0px;
        "
      >
        <div
          class="
            elevation-3
            py-0
            v-list
            v-list--density-default
            v-list--one-line
            v-theme--light
            vd-external-links-list
          "
          role="listbox"
          tabindex="0"
        >
          <a
            class="
              rounded-0
              v-list-item
              v-list-item--density-default
              v-list-item--link
              v-list-item--one-line
              v-list-item--variant-text
              v-theme--light
            "
            href="https://www.ameli.fr"
            rel="noopener noreferrer"
            tabindex="-2"
            target="_blank"
          ><span class="v-list-item__overlay"></span><span class="v-list-item__underlay"></span>
            
          <!---->
            <div
            class="v-list-item__content"
            data-no-activator=""
          >
              
          <!---->
              
          <!---->
              <div class="
            d-flex
            flex-row
            justify-space-between
          ">
                <div class="v-list-item-title">ameli.fr</div><i
            aria-hidden="true"
            class="
              0
              0
              0,0
              0,0
              21,19V12H19V19Z
              3,3.9
              3,5V19A2,2
              5,21H19A2,2
              M14,3V5H17.59L7.76,14.83L9.17,16.24L19,6.41V10H21V3M19,19H5V5H12V3H5C3.89,3
              mdi
              notranslate
              v-icon
              v-icon--size-default
              v-theme--light
            "
            style="
              color: rgba(0, 0, 0, .54);
              caret-color: rgba(0, 0, 0, .54);
            "
          ></i>
              </div>
            </div>
            
          <!---->
          </a>
          <a
            class="
              rounded-0
              v-list-item
              v-list-item--density-default
              v-list-item--link
              v-list-item--one-line
              v-list-item--variant-text
              v-theme--light
            "
            href="https://www.github.com"
            rel="noopener noreferrer"
            tabindex="-2"
            target="_blank"
          ><span class="v-list-item__overlay"></span><span class="v-list-item__underlay"></span>
            
          <!---->
            <div
            class="v-list-item__content"
            data-no-activator=""
          >
              
          <!---->
              
          <!---->
              <div class="
            d-flex
            flex-row
            justify-space-between
          ">
                <div class="v-list-item-title">Github</div><i
            aria-hidden="true"
            class="
              0
              0
              0,0
              0,0
              21,19V12H19V19Z
              3,3.9
              3,5V19A2,2
              5,21H19A2,2
              M14,3V5H17.59L7.76,14.83L9.17,16.24L19,6.41V10H21V3M19,19H5V5H12V3H5C3.89,3
              mdi
              notranslate
              v-icon
              v-icon--size-default
              v-theme--light
            "
            style="
              color: rgba(0, 0, 0, .54);
              caret-color: rgba(0, 0, 0, .54);
            "
          ></i>
              </div>
            </div>
            
          <!---->
          </a>
          <a
            class="
              rounded-0
              v-list-item
              v-list-item--density-default
              v-list-item--link
              v-list-item--one-line
              v-list-item--variant-text
              v-theme--light
            "
            href="https://www.twitter.com"
            rel="noopener noreferrer"
            tabindex="-2"
            target="_blank"
          ><span class="v-list-item__overlay"></span><span class="v-list-item__underlay"></span>
            
          <!---->
            <div
            class="v-list-item__content"
            data-no-activator=""
          >
              
          <!---->
              
          <!---->
              <div class="
            d-flex
            flex-row
            justify-space-between
          ">
                <div class="v-list-item-title">Twitter</div><i
            aria-hidden="true"
            class="
              0
              0
              0,0
              0,0
              21,19V12H19V19Z
              3,3.9
              3,5V19A2,2
              5,21H19A2,2
              M14,3V5H17.59L7.76,14.83L9.17,16.24L19,6.41V10H21V3M19,19H5V5H12V3H5C3.89,3
              mdi
              notranslate
              v-icon
              v-icon--size-default
              v-theme--light
            "
            style="
              color: rgba(0, 0, 0, .54);
              caret-color: rgba(0, 0, 0, .54);
            "
          ></i>
              </div>
            </div>
            
          <!---->
          </a>
        </div>
      </div>
    </transition-stub>
  </div>
  <!-- teleport end -->
</div>
`;

exports[`ExternalLinks > slides on hover or focus 1`] = `
<div id="external-link-btn">
  <button
    aria-controls="external-link-btn"
    aria-expanded="false"
    aria-haspopup="menu"
    aria-label="external-link-btn"
    aria-owns="external-link-btn"
    class="
      d-flex
      px-3
      rounded-0
      v-btn
      v-btn--density-default
      v-btn--elevated
      v-btn--size-default
      v-btn--variant-elevated
      v-theme--light
      vd-external-links-btn
    "
    style="
      background-color: #3d67ae;
      color: #fff;
      caret-color: #fff;
      min-height: 48px;
      min-width: 328px;
      transform: translateX(calc(100% - 48px));
      position: absolute;
      flex-direction: row-reverse;
      top: auto;
      bottom: 0px;
      left: auto;
      right: 0px;
      z-index: 5;
    "
    type="button"
  >
    <span class="v-btn__overlay"></span>
    <span class="v-btn__underlay"></span>
    <!---->
    <span
      class="v-btn__content"
      data-no-activator=""
    >
      <span class="
        ml-3
        vd-external-links-btn-text
        white--text
      ">
        Consulter les données externes
      </span>
      <i
        aria-hidden="true"
        class="
          M15.41,16.58L10.83,12L15.41,7.41L14,6L8,12L14,18L15.41,16.58Z
          mdi
          notranslate
          text-white
          v-icon
          v-icon--size-default
          v-theme--light
        "
      ></i>
    </span>
    <!---->
    <!---->
  </button>
  <!---->
</div>
`;

exports[`ExternalLinks > slides on hover or focus 2`] = `
<div id="external-link-btn">
  <button
    aria-controls="external-link-btn"
    aria-expanded="false"
    aria-haspopup="menu"
    aria-label="external-link-btn"
    aria-owns="external-link-btn"
    class="
      d-flex
      px-3
      rounded-0
      v-btn
      v-btn--density-default
      v-btn--elevated
      v-btn--size-default
      v-btn--variant-elevated
      v-theme--light
      vd-external-links-btn
    "
    style="
      background-color: #3d67ae;
      color: #fff;
      caret-color: #fff;
      min-height: 48px;
      min-width: 328px;
      transform: translateX(0);
      position: absolute;
      flex-direction: row-reverse;
      top: auto;
      bottom: 0px;
      left: auto;
      right: 0px;
      z-index: 5;
    "
    type="button"
  >
    <span class="v-btn__overlay"></span>
    <span class="v-btn__underlay"></span>
    <!---->
    <span
      class="v-btn__content"
      data-no-activator=""
    >
      <span class="
        ml-3
        vd-external-links-btn-text
        white--text
      ">
        Consulter les données externes
      </span>
      <i
        aria-hidden="true"
        class="
          M8.59,16.58L13.17,12L8.59,7.41L10,6L16,12L10,18L8.59,16.58Z
          mdi
          notranslate
          text-white
          v-icon
          v-icon--size-default
          v-theme--light
        "
      ></i>
    </span>
    <!---->
    <!---->
  </button>
  <!---->
</div>
`;

exports[`ExternalLinks > slides on hover or focus 3`] = `
<div id="external-link-btn">
  <button
    aria-controls="external-link-btn"
    aria-expanded="false"
    aria-haspopup="menu"
    aria-label="external-link-btn"
    aria-owns="external-link-btn"
    class="
      d-flex
      px-3
      rounded-0
      v-btn
      v-btn--density-default
      v-btn--elevated
      v-btn--size-default
      v-btn--variant-elevated
      v-theme--light
      vd-external-links-btn
    "
    style="
      background-color: #3d67ae;
      color: #fff;
      caret-color: #fff;
      min-height: 48px;
      min-width: 328px;
      transform: translateX(calc(100% - 48px));
      position: absolute;
      flex-direction: row-reverse;
      top: auto;
      bottom: 0px;
      left: auto;
      right: 0px;
      z-index: 5;
    "
    type="button"
  >
    <span class="v-btn__overlay"></span>
    <span class="v-btn__underlay"></span>
    <!---->
    <span
      class="v-btn__content"
      data-no-activator=""
    >
      <span class="
        ml-3
        vd-external-links-btn-text
        white--text
      ">
        Consulter les données externes
      </span>
      <i
        aria-hidden="true"
        class="
          M15.41,16.58L10.83,12L15.41,7.41L14,6L8,12L14,18L15.41,16.58Z
          mdi
          notranslate
          text-white
          v-icon
          v-icon--size-default
          v-theme--light
        "
      ></i>
    </span>
    <!---->
    <!---->
  </button>
  <!---->
</div>
`;

exports[`ExternalLinks > slides on hover or focus 4`] = `
<div id="external-link-btn">
  <button
    aria-controls="external-link-btn"
    aria-expanded="false"
    aria-haspopup="menu"
    aria-label="external-link-btn"
    aria-owns="external-link-btn"
    class="
      d-flex
      px-3
      rounded-0
      v-btn
      v-btn--density-default
      v-btn--elevated
      v-btn--size-default
      v-btn--variant-elevated
      v-theme--light
      vd-external-links-btn
    "
    style="
      background-color: #3d67ae;
      color: #fff;
      caret-color: #fff;
      min-height: 48px;
      min-width: 328px;
      transform: translateX(0);
      position: absolute;
      flex-direction: row-reverse;
      top: auto;
      bottom: 0px;
      left: auto;
      right: 0px;
      z-index: 5;
    "
    type="button"
  >
    <span class="v-btn__overlay"></span>
    <span class="v-btn__underlay"></span>
    <!---->
    <span
      class="v-btn__content"
      data-no-activator=""
    >
      <span class="
        ml-3
        vd-external-links-btn-text
        white--text
      ">
        Consulter les données externes
      </span>
      <i
        aria-hidden="true"
        class="
          M8.59,16.58L13.17,12L8.59,7.41L10,6L16,12L10,18L8.59,16.58Z
          mdi
          notranslate
          text-white
          v-icon
          v-icon--size-default
          v-theme--light
        "
      ></i>
    </span>
    <!---->
    <!---->
  </button>
  <!---->
</div>
`;

exports[`ExternalLinks > slides on hover or focus 5`] = `
<div id="external-link-btn">
  <button
    aria-controls="external-link-btn"
    aria-expanded="false"
    aria-haspopup="menu"
    aria-label="external-link-btn"
    aria-owns="external-link-btn"
    class="
      d-flex
      px-3
      rounded-0
      v-btn
      v-btn--density-default
      v-btn--elevated
      v-btn--size-default
      v-btn--variant-elevated
      v-theme--light
      vd-external-links-btn
    "
    style="
      background-color: #3d67ae;
      color: #fff;
      caret-color: #fff;
      min-height: 48px;
      min-width: 328px;
      transform: translateX(calc(100% - 48px));
      position: absolute;
      flex-direction: row-reverse;
      top: auto;
      bottom: 0px;
      left: auto;
      right: 0px;
      z-index: 5;
    "
    type="button"
  >
    <span class="v-btn__overlay"></span>
    <span class="v-btn__underlay"></span>
    <!---->
    <span
      class="v-btn__content"
      data-no-activator=""
    >
      <span class="
        ml-3
        vd-external-links-btn-text
        white--text
      ">
        Consulter les données externes
      </span>
      <i
        aria-hidden="true"
        class="
          M15.41,16.58L10.83,12L15.41,7.41L14,6L8,12L14,18L15.41,16.58Z
          mdi
          notranslate
          text-white
          v-icon
          v-icon--size-default
          v-theme--light
        "
      ></i>
    </span>
    <!---->
    <!---->
  </button>
  <!---->
</div>
`;
